[package]
name = "oscli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
anyhow = "1.0.65"
wgpu = "0.14.0"
cfg-if = "1"
winit = "0.27.1"
env_logger = "0.9"
log = "0.4"
pollster = "0.2"
cpal = "0.14"
minimp3 = "0.5.1"
dasp = { version = "0.11", features = ["all"] }
ringbuf = "0.3.0"
bytemuck = { version = "1.4", features = [ "derive" ] }
rustfft = "6.0.1"
realfft = "3.0.1"