[package]
name = "oscli"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.65"
wgpu = "27.0.1"
cfg-if = "1"
winit = "0.30.12"
env_logger = "0.9"
log = "0.4"
cpal = "0.16"
bytemuck = { version = "1.24", features = [ "derive" ] }
ringbuf = "0.4.8"
symphonia = "0.5.4"
pollster = "0.4.0"
